# ITMO_ProgLangLab_BMP

solution/: CMakeLists.txt
solution/include/image/: image.h
solution/include/image/formats/bmp/: bmp.h
solution/include/image/formats/bmp/bmp24/: bmp24.h
solution/include/image/transformations/: transform.h
solution/include/image/transformations/rotate/: rotate.h
solution/include/image/utils/: utils.h
solution/src/: main.c
solution/src/image/: image.c
solution/src/image/formats/bmp/bmp24/: bmp24.c
solution/src/image/transformations/rotate/: rotate.c
solution/src/image/utils/: utils.c
